--- a/Lesson_1_tasks.html
+++ b/Lesson_1_tasks.html
@@ -125,7 +125,7 @@ $(document).ready(function () {
 
 <div id="tasks" class="section level1">
 <h1>Tasks</h1>
-<p>1.) Ensure you understand the levels of measurement for variables (at least nominal, ordinal, numeric), and unit of analysis.</p>
+<p>1.) Ensure you understand the levels of measurement for variables (at least nominal, ordinal, numeric).</p>
 <!--
 Qs:
 
@@ -163,7 +163,7 @@ Nominal, Ordinal, Numeric
 
 
 -->
-<p>2.) Find the data dictionary for the <a href="police.uk" class="uri">police.uk</a> data.</p>
+<p>2.) Find the data dictionary for the <a href="https://data.police.uk/">police.uk</a> data, and copy it into a word document.</p>
 <p><!-- 
  
  Qs:
@@ -191,7 +191,7 @@ T/F
 
 
 --></p>
-<p>3.) Download the .xls data file about Domestic abuse in England and Wales from <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/domesticabuseinenglandandwalesbulletintables">here</a>. Open it up in Excel, and select the sheet that is titled <strong>Figure 2</strong> (<em>Proportion of adults aged 16 to 59 who experienced domestic abuse in the last year, by sex and age group, three year combined dataset, April 2013 to March 2016 CSEW</em>). Tidy this data set, so that you have three variables, which are: <em>age group</em>, <em>gender</em>, and <em>% victims once or more</em>.</p>
+<p>3.) Download the .xls data file about Domestic abuse in England and Wales from <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/domesticabuseinenglandandwalesbulletintables">here</a>. Open it up in Excel, and select the sheet that is titled <strong>Figure 2</strong> (<em>Proportion of adults aged 16 to 59 who experienced domestic abuse in the last year, by sex and age group, three year combined dataset, April 2013 to March 2016 CSEW</em>). Tidy this data set, so that you have three variables, which are: <em>age group</em>, <em>gender</em>, and <em>% victims once or more</em>. Copy your new table that you have created into the same word document where you also saved the police.uk data dictionary.</p>
 <p><!-- 
  
  Qs:
