--- a/reading_list.html
+++ b/reading_list.html
@@ -201,9 +201,15 @@ $(document).ready(function () {
 </div>
 <div id="week-8.-qualitative-data" class="section level2">
 <h2>Week 8. Qualitative data</h2>
+<ul>
+<li>TBD</li>
+</ul>
 </div>
 <div id="week-9.-qualitative-data-analysis" class="section level2">
 <h2>Week 9. Qualitative data analysis</h2>
+<ul>
+<li>TBD</li>
+</ul>
 </div>
 <div id="week-10.-wrap-up-and-project-support" class="section level2">
 <h2>Week 10. Wrap up and project support</h2>
