--- a/index.html
+++ b/index.html
@@ -1,1 +1,100 @@
-<h1>Hello</h1>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Making Sense of Criminological Data</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Making Sense of Criminological Data</h1>
+        <p>An introduction to data analysis for criminologists (and crime analysts) using Excel</p>
+
+        <p class="view"><a href="https://github.com/maczokni/MSCD">View the Project on GitHub <small>maczokni/MSCD</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/maczokni/MSCD/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/maczokni/MSCD/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/maczokni/MSCD">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>
+<a id="welcome-to-the-github-repo-for-making-sense-of-crim-data" class="anchor" href="#welcome-to-the-github-repo-for-making-sense-of-crim-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the GitHub repo for Making Sense of Criminological Data</h3>
+
+<p>This is the GitHub page built by <a href="https://www.research.manchester.ac.uk/portal/reka.solymosi.html">Reka Solymosi</a>. 
+
+<h3>
+<a id="health-warnings" class="anchor" href="#health-warnings" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Health warnings</h3>
+
+<p>Please beware that:</p>
+
+<ul>
+<li>This page is still under considerable development (use with caution).</li>
+<li>These pages are the content of the BA Criminology 2nd year course <a href="http://www.manchester.ac.uk/study/undergraduate/courses/2017/07052/ba-criminology/course-details/LAWS20441#course-unit-details">Making Sense of Criminological Data.</a> They are meant to (very gently) introduce undergraduates to the concept of data analysis, and cover descriptive statsitics and the key concepts required to build an understanding of quantitative data analysis in crime research. 
+It is followed in the second term by <a href="http://www.manchester.ac.uk/study/undergraduate/courses/2017/07052/ba-criminology/course-details/LAWS20452#course-unit-details">Modeling Criminological Data</a> where students cover inferential statistics. The notes presented here are supported by compulsory reading and some lectures, and so  <strong>do not</strong> provide a comprehensive description of these techniques and tools and how to use them. </li>
+<li>The handouts below use, among other data sets, dara from the UK data service such as the Crime Survey for England and Wales that is available under a <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2/">Open Government Licence</a>. This dataset is 
+designed to be a learning resource and should not be used for research purposes or the production of summary statistics. </li>
+<li>We do not hold a degree on statistics. We are just applied social scientists that use quantitative methods. If you detect any errors, please let us know.</li>
+</ul>
+
+<h3>
+<a id="lab-sessions-for-making-sense-of-crim-data" class="anchor" href="#lab-sessions-for-making-sense-of-crim-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lab sessions for Making Sense of Criminological Data</h3>
+
+<ul>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/syllabus.html">The Syllabus</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/reading_list.html">The Reading List</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 1: Data sets & variables</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 2: Describing and visualising single variables</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 3: Making comparisons I: the basics</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 4: Concepts, operationalisation, measurement</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 5: Making comparisons II: the relevance of research design</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 6: Data visualisation</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 7: Looking at trends</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 8: Qualitative data</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 9: Qualitative data analysis</a></li>
+</ul><h3>
+<a name="complementary-learning-materials" class="anchor" href="#complementary-learning-materials"><span class="octicon octicon-link"></span></a>Complementary learning materials</h3>
+
+<h3>
+<a id="complementary-learning-materials" class="anchor" href="#complementary-learning-materials" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Complementary learning materials</h3>
+<p> The labs are also followed by weekly tasks which the students have to complete. These tasks involve the unguided application of the techniques covered in the labs to new data sets. They are assessed by a timed Blackboard quiz with questions that students can only successfully answer within the time limit if they've completed the tasks before hand. Tasks for each week can be found <a href="">here</a>.
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble or questions? Have some feedback? Please email <a href="mailto:reka.solymosi@manchester.ac.uk">reka.solymosi@manchester.ac.uk</a>. Please get in touch as well with any feedback. Your feedback, thus, is appreciated.</p>
+
+<h3>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h3>
+
+<p>Making Sense of Criminological Data by Reka Solymosi. <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Making Sense of Criminological Data</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://maczokni.github.io/MSCD/" property="cc:attributionName" rel="cc:attributionURL">Reka Solymosi</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://maczokni.github.io/MSCD/" rel="dct:source">https://maczokni.github.io/MSCD/</a>.</p>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/maczokni">maczokni</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-54384819-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+  </body>
+</html>
