--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
         <h3>
 <a id="welcome-to-the-github-repo-for-making-sense-of-crim-data" class="anchor" href="#welcome-to-the-github-repo-for-making-sense-of-crim-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the GitHub repo for Making Sense of Criminological Data</h3>
 
-<p>This is the GitHub page built by <a href="https://www.research.manchester.ac.uk/portal/reka.solymosi.html">Reka Solymosi</a>. 
-
+<p>This is the GitHub page built by <a href="https://www.research.manchester.ac.uk/portal/reka.solymosi.html">Reka Solymosi</a>. It contains the lab materials for an introduction to data analysis course designed for 2nd year undergraduates on the BA Criminology programme at the University of Manchester. 
+  It makes use of Excel, as we have identified a gap in training students to use Excel, despite it being a primary tool for data analysis (whether we like it or not) in many public and private sector organisations. As many students take Q-step internships, this skill was identified as important. We teach students to use R in the second semester. 
+  A fantastic guide for crime analysis using R that has been created by Juanjo Medina is <a href="http://jjmedinaariza.github.io/R-for-Criminologists/">R for Criminologists</a>, please do refer to that as well. Making Sense of Crim Data introduces students to data, and the concepts of descriptive data analysis. You can see the Syllabus in the materials below. 
+        </p>
+  
 <h3>
-<a id="health-warnings" class="anchor" href="#health-warnings" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Health warnings</h3>
+<a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Disclaimer</h3>
 
 <p>Please beware that:</p>
 
@@ -48,7 +51,7 @@ designed to be a learning resource and should not be used for research purposes 
 </ul>
 
 <h3>
-<a id="lab-sessions-for-making-sense-of-crim-data" class="anchor" href="#lab-sessions-for-making-sense-of-crim-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lab sessions for Making Sense of Criminological Data</h3>
+<a id="materials-for-making-sense-of-crim-data" class="anchor" href="#materials-for-making-sense-of-crim-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Materials for Making Sense of Criminological Data</h3>
 
 <ul>
 <li><a href="https://rawgit.com/maczokni/MSCD/master/syllabus.html">The Syllabus</a></li>
@@ -62,7 +65,8 @@ designed to be a learning resource and should not be used for research purposes 
 <li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 7: Looking at trends</a></li>
 <li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 8: Qualitative data</a></li>
 <li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lesson 9: Qualitative data analysis</a></li>
-</ul><h3>
+</ul>
+        <h3>
 <a name="complementary-learning-materials" class="anchor" href="#complementary-learning-materials"><span class="octicon octicon-link"></span></a>Complementary learning materials</h3>
 
 <h3>
@@ -77,7 +81,7 @@ designed to be a learning resource and should not be used for research purposes 
 <h3>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h3>
 
-<p>Making Sense of Criminological Data by Reka Solymosi. <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Making Sense of Criminological Data</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://maczokni.github.io/MSCD/" property="cc:attributionName" rel="cc:attributionURL">Reka Solymosi</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://maczokni.github.io/MSCD/" rel="dct:source">https://maczokni.github.io/MSCD/</a>.</p>
+<p> <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Making Sense of Criminological Data</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://maczokni.github.io/MSCD/" property="cc:attributionName" rel="cc:attributionURL">Reka Solymosi</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://maczokni.github.io/MSCD/" rel="dct:source">https://maczokni.github.io/MSCD/</a>.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/maczokni">maczokni</a></p>
