updated index for all material

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ designed to be a learning resource and should not be used for research purposes 
 <ul>
 <li><a href="https://rawgit.com/maczokni/MSCD/master/syllabus.html">The Syllabus</a></li>
 <li><a href="https://rawgit.com/maczokni/MSCD/master/reading_list.html">The Reading List</a></li>
-<li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Worksheets for lab sessions</a></li>
+<li><a href="https://rawgit.com/maczokni/MSCD/master/book/bookdown-demo-master/bookdown-demo-master/_book/">Worksheets for lab sessions</a></li>
 <li><a href="https://www.dropbox.com/sh/shlei84x0bm5laf/AABUq3cgp7__VR0XtqjflS_Ka?dl=0">Homework tasks</a></li>
 <li><a href="https://www.dropbox.com/sh/2vbt9gi3az2lagj/AACMXSEkQbhNul-WLe5GeOW0a?dl=0">Data sets for the worksheets and homework tasks</a></li>
 <li><a href="https://rawgit.com/maczokni/MSCD/master/Lesson_1.html">Lecture powerpoints</a></li>
