updated reading list

--- a/reading_list.html
+++ b/reading_list.html
@@ -333,58 +333,111 @@ $(document).ready(function () {
 <div id="week-1.-data-sets-variables" class="section level2">
 <h2>Week 1. Data sets &amp; variables</h2>
 <ul>
-<li>Watch: <a href="http://www.gapminder.org/videos/the-joy-of-stats/">Hans Rosling The Joy of Stats</a></li>
-<li>Chapter 1 (p.1-5): <a href="https://www.dawsonera.com/readonline/9781847650795">The Tiger that Isn’t</a></li>
-<li>Chapter 1 (p.1-7): <a href="https://www.dawsonera.com/readonline/9781292034898">Statistical Methods for the Social Sciences: Pearson New International Edition</a></li>
-<li>Chapter 2 (p.13-27): <a href="https://link.springer.com/chapter/10.1007/978-1-4614-9170-5_2">Statistics in Criminal Justice</a> (not the exercises)</li>
+<li>Watch this video: <a href="http://www.gapminder.org/videos/the-joy-of-stats/">Hans Rosling The Joy of Stats</a></li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=proquest1536009109&amp;context=PC&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Blastland, M., &amp; Dilnot, A. W. (2008). The tiger that isn’t: seeing through a world of numbers. Profile books</a>
+<ul>
+<li>Introduction</li>
+</ul></li>
+<li><a href="https://link.springer.com/chapter/10.1007/978-1-4614-9170-5_2">Weisburd D., Britt C. (2014) Statistics in Criminal Justice. Springer, Boston, MA</a>
+<ul>
+<li>Chapter 2: Measurement: The Basic Building Block of Research (not the exercises)</li>
+</ul></li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma992975763714001631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Agresti, A., &amp; Finlay, B. (2013). Statistical Methods for the Social Sciences: Pearson New International Edition. Place of publication not identified: Pearson Education Limited.</a>
+<ul>
+<li>Chapter 1: Introduction</li>
+</ul></li>
 </ul>
 </div>
 <div id="week-2.-describing-and-visualising-single-variables" class="section level2">
 <h2>Week 2. Describing and visualising single variables</h2>
 <ul>
-<li>Chapter 5, (p.68-87): <a href="https://www.dawsonera.com/readonline/9781847650795">The tiger that isn’t</a></li>
-<li>Chapter 5: (p.61-78): <a href="https://www.dawsonera.com/readonline/9781442215092">Just plain data analysis</a></li>
-<li>Chapter 3 (p.31-61): <a href="https://www.dawsonera.com/readonline/9781292034898">Statistical Methods for the Social Sciences: Pearson New International Edition</a>.</li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=proquest1536009109&amp;context=PC&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Blastland, M., &amp; Dilnot, A. W. (2008). The tiger that isn’t: seeing through a world of numbers. Profile books</a>
+<ul>
+<li>Chapter 5: Averages: The White Rainbow</li>
+</ul></li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma9959928450001631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Gary M. Klass (2012) Just Plain Data Analysis. Rowman &amp; Littlefield Publishers</a>
+<ul>
+<li>Chapter 5: Tabulating the Data and Writing about the Numbers</li>
+</ul></li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma992975763714001631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Agresti, A., &amp; Finlay, B. (2013). Statistical Methods for the Social Sciences: Pearson New International Edition. Place of publication not identified: Pearson Education Limited.</a>
+<ul>
+<li>Chapter 3: Descriptive Statistics</li>
+</ul></li>
 </ul>
 </div>
 <div id="week-3.-making-comparisons-i-the-basics" class="section level2">
 <h2>Week 3. Making comparisons I: the basics</h2>
 <ul>
-<li>Chapters 2 and 3 (p.6-36): <a href="https://www.dawsonera.com/readonline/9781847650795">The Tiger that Isn’t</a></li>
-<li>Chapter 3 (p.36-64): <a href="https://link.springer.com/chapter/10.1007/978-1-4614-9170-5_3">Statistics in Criminal Justice</a></li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=proquest1536009109&amp;context=PC&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Blastland, M., &amp; Dilnot, A. W. (2008). The tiger that isn’t: seeing through a world of numbers. Profile books</a>:
+<ul>
+<li>Chapter 1: Counting: Use Mushy Peas and Chapter</li>
+<li>Chapter 2: Size: It’s Personal</li>
+</ul></li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma9959928450001631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Gary M. Klass (2012) Just Plain Data Analysis. Rowman &amp; Littlefield Publishers</a>
+<ul>
+<li>Chapter 4: Examining a relationship: New York City Crime Rates</li>
+</ul></li>
+<li><a href="https://link.springer.com/chapter/10.1007/978-1-4614-9170-5_2">Weisburd D., Britt C. (2014) Statistics in Criminal Justice. Springer, Boston, MA</a>
+<ul>
+<li>Chapter 3: Representing and Displaying Data</li>
+</ul></li>
 </ul>
 </div>
 <div id="week-4.-concepts-operationalisation-measurement-and-sampling" class="section level2">
 <h2>Week 4. Concepts, operationalisation, measurement, and Sampling</h2>
 <ul>
-<li>Chapters 6 and 8 (p.88-106 and 124-146): <a href="https://www.dawsonera.com/readonline/9781847650795">The Tiger tht Isn’t</a></li>
-<li>Chapters 5 and 6 (p.123-196): <a href="https://www.dawsonera.com/abstract/9781408093153">The Practice of Social Research, International Edition</a></li>
-<li>Chapters 4 and 5 (p.65-124) in <a href="https://link.springer.com/book/10.1007%2F978-1-4614-9170-5">Statistics in Criminal Justice</a></li>
-<li>Chapter 2 (p.11-25): <a href="https://www.dawsonera.com/readonline/9781292034898">Statistical Methods for the Social Sciences: Pearson New International Edition</a>.</li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=proquest1536009109&amp;context=PC&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Blastland, M., &amp; Dilnot, A. W. (2008). The tiger that isn’t: seeing through a world of numbers. Profile books</a></li>
+<li>Chapter 6: Targets: The Whole Elephant</li>
+<li>Chapter 8: Sampling: Drinking from the Firehose</li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma992975996319901631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;isFrbr=true&amp;tab=Everything&amp;lang=en">Babbie, E. (2016). The practice of social research (Fourteenth edition.). Australia: Cengage Learning.</a>
+<ul>
+<li>Chapter 5: Conceptualization, Operationalization, and Measurement</li>
+<li>Chapter 6: Indexes, Scales, and Typologies</li>
+</ul></li>
 </ul>
 </div>
 <div id="week-5.-making-comparisons-ii-the-relevance-of-research-design" class="section level2">
 <h2>Week 5. Making comparisons II: the relevance of research design</h2>
 <ul>
-<li>Chapter 4 (p.88-122): <a href="https://www.dawsonera.com/abstract/9781408093153">The Practice of Social Research, International Edition</a>.</li>
-<li>Chapter 1 (p.1-22): <a href="https://www.dawsonera.com/readonline/9781442215092">Just Plain Data Analysis</a></li>
-<li>Chapter 1 and half of 2 (p.1-21): <a href="https://www.cambridge.org/core/books/principles-of-applied-statistics/E7225E64F86B2C8193CA3C57621B6338">Principles of Applied Statistics</a> (stop after section 2.3)</li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma992975996319901631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;isFrbr=true&amp;tab=Everything&amp;lang=en">Babbie, E. (2016). The practice of social research (Fourteenth edition.). Australia: Cengage Learning.</a>
+<ul>
+<li>Chapter 4: Research Design</li>
+</ul></li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma9959928450001631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Gary M. Klass (2012) Just Plain Data Analysis. Rowman &amp; Littlefield Publishers</a>
+<ul>
+<li>Chapter 1: Measuring Political, Social, and Economic Conditions</li>
+</ul></li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma9957439210001631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Cox, D., &amp; Donnelly, C. (n.d.). Principles of applied statistics. Cambridge ;: Cambridge University Press.</a>
+<ul>
+<li>Chapter 1: Some General Concepts</li>
+<li>half of Chaptaer 2: Design of Studies. Note: STOP AFTER SECTION 2.3: Types of Study</li>
+</ul></li>
 </ul>
 </div>
 <div id="week-6.-data-visualisation" class="section level2">
 <h2>Week 6. Data visualisation</h2>
 <ul>
 <li>Watch: <a href="https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization">David Mccandless on the beauty of data visualisation</a></li>
-<li>Chapters 1 and 2 (p.27-65) <a href="https://www.vlebooks.com/vleweb/Product/Index/819451?page=0">The Truthful Art by Alerto Cairo</a></li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma992975992516101631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Cairo, A. (n.d.). The truthful art data, charts, and maps for communication . Berkeley: New Riders.</a>
+<ul>
+<li>Chapter 1: What We Talk About When We Talk About Visualisation</li>
+<li>Chapter 2: The FIve QUalitites of Great Visualisations</li>
+</ul></li>
 </ul>
 </div>
 <div id="week-7.-looking-at-trends" class="section level2">
 <h2>Week 7. Looking at trends</h2>
 <ul>
-<li><p>Chapter 13 (p.95-102)<a href>‘Models Are Stories Are Not Real Life’ in Statistics in Society</a></p></li>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma9913496214401631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Dorling, D., &amp; Simpson, S. (n.d.). Statistics in society : the arithmetic of politics . London: Arnold.</a>
+<ul>
+<li>Chapter 13: ‘Models Are Stories Are Not Real Life’ NOTE: THIS IS NOT AVAILABLE ONLINE YOU HAVE TO GO TO LIBRARY TO FIND HARD COPY</li>
+</ul></li>
 <li><a href="www.ons.gov.uk/ons/guide-method/method-quality/specific/crime-statistics-methodology/methodological-note--seasonality-of-property-crime.pdf">Read this ONS report on the seasonality of crime</a> - download link</li>
-<li>Chapter 14: Time (p.407-449) <a href="https://link-springer-com.manchester.idm.oclc.org/chapter/10.1007/0-387-28695-0_14">Grammar of Graphics</a></li>
-<li><p>This paper on <a href="http://www.sciencedirect.com/science/article/pii/S0143622813001410">Crime seasonality and its variations across space</a></p></li>
+<li><a href="https://link-springer-com.manchester.idm.oclc.org/chapter/10.1007/0-387-28695-0_14">Wilkinson, L. (2005). The Grammar of Graphics (Second Edition.). New York, NY: Springer New York. https://doi.org/10.1007/0-387-28695-0</a>
+<ul>
+<li>Chapter 14: Time</li>
+</ul></li>
+<li>This paper on crime seasonality and its variations across space: <a href="http://www.sciencedirect.com/science/article/pii/S0143622813001410">Andresen, M. A., &amp; Malleson, N. (2013). Crime seasonality and its variations across space. Applied Geography, 43, 25-35.</a></li>
 </ul>
 </div>
 <div id="week-8.-qualitative-data" class="section level2">
