--- a/reading_list.html
+++ b/reading_list.html
@@ -418,7 +418,7 @@ $(document).ready(function () {
 <h2>Week 6. Data visualisation</h2>
 <ul>
 <li>Watch: <a href="https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization">David Mccandless on the beauty of data visualisation</a></li>
-<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma992975992516101631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Cairo, A. (n.d.). The truthful art data, charts, and maps for communication . Berkeley: New Riders.</a>
+<li><a href="https://www.librarysearch.manchester.ac.uk/discovery/fulldisplay?docid=alma992975992516101631&amp;context=L&amp;vid=44MAN_INST:MU_NUI&amp;search_scope=MyInst_and_CI&amp;tab=Everything&amp;lang=en">Cairo, A. (2016). The truthful art data, charts, and maps for communication . Berkeley: New Riders.</a>
 <ul>
 <li>Chapter 1: What We Talk About When We Talk About Visualisation</li>
 <li>Chapter 2: The FIve QUalitites of Great Visualisations</li>
