update word count

--- a/syllabus.html
+++ b/syllabus.html
@@ -277,6 +277,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -470,7 +473,7 @@ $(document).ready(function () {
 </div>
 <div id="assessment-methods" class="section level2">
 <h2>Assessment methods</h2>
-<p><strong>Final project 80%</strong>. Students will be required to produce a report of 3,000 words incorporating charts, tables and graphs, to be produced to a good quality standard.</p>
+<p><strong>Final project 80%</strong>. Students will be required to produce a report of 2,500 words incorporating charts, tables and graphs, to be produced to a good quality standard.</p>
 <p><strong>Homework 20%</strong>. Short homework exercises will be assigned every week, to be submitted either through Blackboard, or through presentation in the feedback session.</p>
 </div>
 <div id="feedback" class="section level2">
